name:                 cql
version:              2.0.0
synopsis:             Cassandra CQL binary protocol.
stability:            experimental
license:              OtherLicense
license-file:         LICENSE
author:               Toralf Wittner, Roman S. Borschel
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            2013 Toralf Wittner, Roman S. Borschel
category:             Database
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   README.md

description:
    Implementation of Cassandra's CQL binary protocol (version 2).

source-repository head
    type:             git
    location:         git@github.com:twittner/cql.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Database.CQL.Protocol
        Database.CQL.Protocol.Internal

    other-modules:
        Database.CQL.Protocol.Class
        Database.CQL.Protocol.Codec
        Database.CQL.Protocol.Header
        Database.CQL.Protocol.Request
        Database.CQL.Protocol.Response
        Database.CQL.Protocol.Tuple
        Database.CQL.Protocol.Types

    build-depends:
          base       == 4.*
        , bytestring >= 0.10
        , cereal     >= 0.3
        , Decimal    >= 0.3
        , network    >= 2.4
        , text       >= 0.11
        , tagged     >= 0.7
        , time       >= 1.4
        , uuid       >= 1.2.6

test-suite cql-tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    ghc-prof-options: -prof -auto-all
    ghc-options:
        -Wall
        -fwarn-tabs
        -funbox-strict-fields

    other-modules:
        Test.Client
        Test.Database.CQL.Protocol
        Test.Database.CQL.Protocol.Arbitraries

    build-depends:
          base             == 4.*
        , ansi-terminal    >= 0.6
        , bytestring       >= 0.10
        , cereal           >= 0.3
        , cql
        , Decimal          >= 0.3
        , HUnit            >= 1.2
        , lz4              >= 0.2
        , mtl              >= 2.1
        , network          >= 2.4
        , pretty-hex       >= 1.0
        , QuickCheck       >= 2.5
        , snappy           >= 0.2
        , tasty            >= 0.3
        , tasty-hunit      >= 0.2
        , tasty-quickcheck >= 0.2
        , text             >= 0.11
        , time             >= 1.4
        , transformers     >= 0.3
        , uuid             >= 1.2.6
