name:                 cql
version:              2.0.0.6
synopsis:             Cassandra CQL binary protocol.
stability:            experimental
license:              OtherLicense
license-file:         LICENSE
author:               Toralf Wittner, Roman S. Borschel
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            2014 Toralf Wittner, Roman S. Borschel
category:             Database
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   README.md

description:
    Implementation of Cassandra's CQL binary protocol (version 2).

source-repository head
    type:             git
    location:         git@github.com:twittner/cql.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Database.CQL.Protocol
        Database.CQL.Protocol.Internal

    other-modules:
        Database.CQL.Protocol.Class
        Database.CQL.Protocol.Codec
        Database.CQL.Protocol.Record
        Database.CQL.Protocol.Tuple
        Database.CQL.Protocol.Tuple.TH
        Database.CQL.Protocol.Types
        Database.CQL.Protocol.V2.Header
        Database.CQL.Protocol.V2.Request
        Database.CQL.Protocol.V2.Response

    build-depends:
          base             >= 4.5    && < 5.0
        , bytestring       >= 0.10   && < 1.0
        , cereal           >= 0.3    && < 0.5
        , Decimal          >= 0.3    && < 1.0
        , network          >= 2.4    && < 3.0
        , text             >= 0.11   && < 2.0
        , tagged           >= 0.7    && < 1.0
        , template-haskell
        , time             >= 1.4    && < 2.0
        , transformers     >= 0.3    && < 0.5
        , uuid             >= 1.2.6  && < 2.0

test-suite cql-tests
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    main-is:          Main.hs
    hs-source-dirs:   test
    ghc-options:      -threaded -Wall -O2 -fwarn-tabs

    build-depends:
          base
        , bytestring
        , cereal
        , cql
        , Decimal
        , QuickCheck
        , tasty            >= 0.8
        , tasty-quickcheck >= 0.8
        , text
        , time
        , uuid

